Closed Bug 479906 Opened 15 years ago Closed 15 years ago

Fix crasher introduced in debug builds by bug 374577

Categories

(MailNews Core :: Security, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b3

People

(Reporter: dmosedale, Assigned: dmosedale)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #374577 +++

The comments at the end of that bug have the details.
I can't actually reproduce the crash, but this looks like the right fix to me.
Attachment #363998 - Flags: superreview?(bienvenu)
Attachment #363998 - Flags: review?(bienvenu)
Attachment #363998 - Flags: superreview?(bienvenu)
Attachment #363998 - Flags: superreview+
Attachment #363998 - Flags: review?(bienvenu)
Attachment #363998 - Flags: review+
Comment on attachment 363998 [details] [diff] [review]
actually check rv, v1

rs=bienvenu
Revision 9c3f21f04cf0 pushed.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: