Fix debug build crasher introduced by JS-in-messages changes (bug 479906); rs=bienvenu

--HG--
extra : rebase_source : ee35d98a9c3fc6b476f24ed8817d2891e0d3611b